--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
     "watch": "brunch watch --stdin"
   },
   "dependencies": {
+    "foundation-sites": "^6.3.1",
+    "jquery": "2.2.4",
+    "motion-ui": "^1.2.2",
     "phoenix": "file:deps/phoenix",
-    "phoenix_html": "file:deps/phoenix_html"
+    "phoenix_html": "file:deps/phoenix_html",
+    "sass-brunch": "^2.10.4"
   },
   "devDependencies": {
     "babel-brunch": "~6.0.0",
